# what-should-i-eat

./: .gitignore
input/: dislikes.json  likes.json
what_should_i_eat_crawler/: pyproject.toml
what_should_i_eat_crawler/tests/: test_what_should_i_eat_crawler.py
what_should_i_eat_crawler/what_should_i_eat_crawler/what_should_i_eat/: scrapy.cfg
what_should_i_eat_crawler/what_should_i_eat_crawler/what_should_i_eat/what_should_i_eat/: items.py  middlewares.py  pipelines.py  settings.py
what_should_i_eat_crawler/what_should_i_eat_crawler/what_should_i_eat/what_should_i_eat/input/: dislikes_category.json  eval.tsv  likes_category.json
what_should_i_eat_crawler/what_should_i_eat_crawler/what_should_i_eat/what_should_i_eat/spiders/: kikkoman_spider.py  like_spider.py
what_should_i_eat_ml/: models.py  train-cloud.sh
what_should_i_eat_ml/eval/: .OSInstallerMessages  Dockerfile  download-artifcat.sh  eval-docker-image-push.sh  eval.py
what_should_i_eat_ml/input/: dislikes_recipe.tsv
what_should_i_eat_ml/train/: Dockerfile  models.py  train-cloud.sh
what_should_i_eat_ml/train/input/: likes_recipe.tsv
